Fix more bugs